@@ -66,6 +66,12 @@ scrollbar-shadow-color:#F0F0EE;
 scrollbar-track-color:#F5F5F5;
 }
 
+/*  Link styles */
+
+a { color: #0000ff; text-decoration: underline; }
+span.mceNonEditable a { color: black!important; text-decoration: none!important; }
+a span.mceNonEditable a { color: #0000ff!important; text-decoration: underline!important; }
+
 /* Literal style */
 
 pre
@@ -75,10 +81,10 @@ pre
 
 /* general block tags (embed and custom) */
 
-* html div.mceNonEditable,
+* html span.mceEmbedBlockTag,
 * html div.mceItemCustomTag { height: 1%; }
 
-div.mceNonEditable:after,
+span.mceEmbedBlockTag:after,
 div.mceItemCustomTag:after
 {
     content: "-";
@@ -103,105 +109,107 @@ div.mceItemCustomTag, span.mceItemCustomTag { background-color: #ccffff; }
 /* Visualisation of default inline custom tags */
 
 
-span.sub
+span.mceItemCustomTag.sub
 {
   vertical-align: sub;
   font-size: 0.8em;
 }
 
-span.sup
+span.mceItemCustomTag.sup
 {
   vertical-align: super;
   font-size: 0.8em;
 }
 
-span.strike
+span.mceItemCustomTag.strike
 {
   text-decoration: line-through;
 }
 
-span.underline
+span.mceItemCustomTag.underline
 {
   text-decoration: underline
 }
 
 /* Visualisation of default block custom tags */
 
-div.pagebreak
+div.mceItemCustomTag.pagebreak
 {
   height: 12px;
   border: 1px dotted #ccc;
   margin: 15px 0 15px 0;
 }
 
-div.pagebreak p { margin: 0; }
+div.mceItemCustomTag.pagebreak p { margin: 0; }
 
-div.separator
+div.mceItemCustomTag.separator
 {
     padding: 0;
     margin: 0.5em 0;
     clear: both;
 }
 
-div.separator p { margin: 2px; }
+div.mceItemCustomTag.separator p { margin: 2px; }
 
 /* change the style for embed tags */
 
-div.mceNonEditable, span.mceNonEditable
+span.mceNonEditable
 {
-    background: transparent url('../../../images/tango/mail-attachment.png') no-repeat 0 2px scroll;
+    background: #d6fedd url('../../../images/tango/mail-attachment.png') no-repeat 0 2px scroll;
     min-height: 18px;
     padding-left: 16px;
 }
 /* core.css ez layout styles for embed tags */
 
-div.mceNonEditable div.block /* Used around groups of objects which are connected in some way, and requires extra margins to the surroundings */
+span.mceEmbedBlockTag { display: block; }
+
+span.mceEmbedBlockTag div.block /* Used around groups of objects which are connected in some way, and requires extra margins to the surroundings */
 {
   margin: 0.5em 0 0.5em 0;
   padding: 0;
   clear: both;
 }
 
-div.mceNonEditable div.block div.element /* Used if several objects are to be stacked horizontally within the same block */
+span.mceEmbedBlockTag div.block div.element /* Used if several objects are to be stacked horizontally within the same block */
 {
   padding-right: 1em;
   float: left;
 }
 
-div.mceNonEditable div.block div.left /* Floats elements to the left in a block */
+span.mceEmbedBlockTag div.block div.left /* Floats elements to the left in a block */
 {
   width: 48%;
   float: left;
   clear: left;
 }
 
-div.mceNonEditable div.block div.right /* Floats elements to the right in a block */
+span.mceEmbedBlockTag div.block div.right /* Floats elements to the right in a block */
 {
   width: 48%;
   float: right;
   clear: right;
 }
 
-div.mceNonEditable div.object-left /* Used for floating images and other content elements to the left inside other content */
+span.mceEmbedBlockTag div.object-left /* Used for floating images and other content elements to the left inside other content */
 {
   margin: 0.25em 0.25em 0.25em 0;
   float: left;
   clear: left;
 }
 
-div.mceNonEditable div.object-right /* Used for floating images and other content elements to the right inside other content */
+span.mceEmbedBlockTag div.object-right /* Used for floating images and other content elements to the right inside other content */
 {
   margin: 0.25em 0 0.25em 0.25em;
   float: right;
   clear: right;
 }
 
-div.mceNonEditable div.split
+span.mceEmbedBlockTag div.split
 {
   clear: both;
 }
 
-div.mceNonEditable div.split:after /* Terminate floating elements flow */
+span.mceEmbedBlockTag div.split:after /* Terminate floating elements flow */
 {
   content: "-";
   height: 0;
@@ -211,29 +219,29 @@ div.mceNonEditable div.split:after /* Terminate floating elements flow */
   clear: both;
 }
 
-div.mceNonEditable div.split div.three-left
+span.mceEmbedBlockTag div.split div.three-left
 {
   width: 31%;
   float: left;
 }
 
-div.mceNonEditable div.split div.three-right
+span.mceEmbedBlockTag div.split div.three-right
 {
   width: 31%;
   float: right;
 }
 
-div.mceNonEditable div.split div.three-center
+span.mceEmbedBlockTag div.split div.three-center
 {
   margin: 0 35% 0 35%;
 }
 
-div.mceNonEditable .float-break
+span.mceEmbedBlockTag .float-break
 {
     height: 1%; /* Fix for IE */
 }
 
-div.mceNonEditable .float-break:after /* Terminate floating elements flow */
+span.mceEmbedBlockTag .float-break:after /* Terminate floating elements flow */
 {
     content: "-";
     height: 0;
@@ -243,7 +251,7 @@ div.mceNonEditable .float-break:after /* Terminate floating elements flow */
     clear: both;
 }
 
-div.mceNonEditable div.break /* Old method for terminating floating elements flow; kept for backwards compatibility */
+span.mceEmbedBlockTag div.break /* Old method for terminating floating elements flow; kept for backwards compatibility */
 {
     clear: both;
     font-size: 1px; /* Fix for IE */
