@@ -93,16 +93,6 @@ Skin=o2k7
 # Included skin variants in the o2k7 skin is: 'silver' and 'black'
 SkinVariant=
 
-# Map custom attribute names to style values so they are previewed in the editor.
-# Please do not use the folowing style values since they are used for
-# converting content pasted from for instance word:
-# font-weight, font-style, text-decoration, border and width
-CustomAttributeStyleMap[]
-#CustomAttributeStyleMap[text-color]=color
-#CustomAttributeStyleMap[background-color]=background-color
-#CustomAttributeStyleMap[border-color]=border-color
-#CustomAttributeStyleMap[border-width]=border-width
-
 # Turns on development mode:
 # - disables js / css packer (for debugging apache rewrite rules)
 DevelopmentMode=disabled
